2006-05-27  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Update.

	* debian/control (Standards-Version): Update to 3.7.2.

2006-05-27  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Bump version to 0.2.11.

	* NEWS: Bump version to 0.2.11.

	* configure.ac: Bump version to 0.2.11.

2006-05-27  Roger Leigh  <rleigh@debian.org>

	* Version 0.2.10.

	* debian/changelog: Update for 0.2.10.

2006-05-27  Roger Leigh  <rleigh@debian.org>

	* schroot/setup/50chrootname: Strip session UUID when writing
	/etc/debian_chroot.

2006-05-15  Roger Leigh  <rleigh@debian.org>

	* po/sv.po: Updated translated from the Free Translation Project.

2006-05-14  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-chroot-config.cc (add): If a chroot alias is the
	same as the chroot name, don't warn about it, because the effect
	is still unambiguous.

2006-04-30  Roger Leigh  <rleigh@debian.org>

	* Remove unused .cvsignore files.

2006-04-30  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.cc: Update documentation.

	* schroot/schroot-releaselock.cc: Update documentation.

2006-04-30  Roger Leigh  <rleigh@debian.org>

	* debian/control (Standards-Version): Upgrade to 3.7.0.

2006-04-30  Roger Leigh  <rleigh@debian.org>

	* configure.ac: Bump version to 0.2.10.

	* NEWS: Bump version to 0.2.10.

	* debian/changelog: Bump version to 0.2.10-1.

2006-04-30  Roger Leigh  <rleigh@debian.org>

	* Makefile.am (dist-hook): Don't distribute .svn directories.

2006-04-30  Roger Leigh  <rleigh@debian.org>

	* Version 0.2.9.

	* debian/changelog: Update for 0.2.9.

	* po/en_GB.po: Updated British English translation.

	* README: Document new compiler requirements.

2006-04-30  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document directory behaviour.

	* schroot/sbuild-session.cc (run_child): If the current working
	directory does not exist inside the chroot, change to the home
	directory (for login shells), or fail with an error (for commands)