@@ -3,3 +3,6 @@ principal areas that each contributed to are listed in addition.
 
 Roger Leigh		<rleigh@debian.org>
 	Architecture, Coding, Documentation.
+
+Andreas Bombe		<aeb@debian.org>
+	Documentation improvements.
